--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
 
 <form>
 <label for='username'>Username</label>
-<input type='text' id='username'><br><br>
+<input type='text' id='username' style="background-color:white;"><br><br>
 <label for='password'>Password</label>&nbsp;
-<input type='password' id='password'><br><br>
+<input type='password' id='password' style="background-color:white;"><br><br>
 <input type="button" value="SUBMIT" style="background-color: green; color: white;">
 </form>
 New user?<a href="createaccount.html" target="_blank">create account</a>
