--- a/login.html
+++ b/login.html
@@ -2,15 +2,15 @@
 <head>
  <title>login</title>
 </head>
-<body align="center" style="font-size:20;color:white;background-color:grey;">
+<body align="center" style="font-size:20px;color:white;background-color:grey;">
 
 <h1 >LOGIN</h1>
 
 <form>
 <label for='username'>Username</label>
-<input type='text' id='username' style="background-color:white;"><br><br>
+<input type='text' id='username' style="background-color: #f0f0f0; color: #333333; border: 2px solid #4CAF50; padding: 10px; font-size: 16px; border-radius: 5px;"><br><br>
 <label for='password'>Password</label>&nbsp;
-<input type='password' id='password' style="background-color:white;"><br><br>
+<input type='password' id='password' style="background-color: #f0f0f0; color: #333333; border: 2px solid #4CAF50; padding: 10px; font-size: 16px; border-radius: 5px;"><br><br>
 <input type="button" value="SUBMIT" style="background-color: green; color: white;">
 </form>
 New user?<a href="createaccount.html" target="_blank">create account</a>
