--- a/frontpage.html
+++ b/frontpage.html
@@ -1,17 +1,19 @@
+
 <html>
 <head>
  <title>front page</title>
 </head>
 <body style="background-image:linear-gradient(to bottom,rgba(0,0,0,.1),rgba(0,0,0,.5)),url('tree2.jpg');background-repeat:no-repeat;background-position:center;background-size:cover;font-size:20px;color:white;">
 <h1 style="text-align:center;font-size:40px;font-family:arial,sans-serif;">ART HUB</h1>
-<a  href='login.html' target='_balnk'><h3>Login</h3></a>
-<a href='menu.html' target='_balnk'><h3>Menu</h3></a>
+<button type="submit" style="background-color:#FFFDD0;"><a  href='login.html' target='_balnk'><h3>Login</h3></a>
+</button><br>
+<button type="submit" style="background-color:#FFFDD0;"><a href='menu.html' target='_balnk'><h3>Menu</h3></a>
+</button>
 <P style="text-align:center;font-size:25px;font-family:'times new roman',serif;">
 <b>Welcome to Art Hub!</b>
 <br><br>
-<i>Introduction: Art Hub is a global community that connects art enthusiasts, collectors, and creators from all corners of the world. Our platform offers a unique space where you can discover and appreciate a diverse range of artworks, connect with talented artists, and even buy or sell exceptional pieces of art.
+<i>Introduction: Art Hub is a global community that connects art enthusiasts, collectors, and creators from all corners of the world. Our platform offers a unique space where you can discover and appreciate a diverse range of artworks and antique products, connect with talented artists, and even buy or sell exceptional pieces of art.
 <br><br>
- At Art Hub, our mission is to bridge the gap between artists and art lovers, creating a vibrant marketplace that celebrates creativity and fosters a deep appreciation for the arts. We aim to empower artists by providing them with a platform to showcase their talents and reach a wider audience.
-</i></p>
+At Art Hub, our mission is to bridge the gap between artists and art lovers, creating a vibrant marketplace that celebrates creativity and fosters a deep appreciation for the arts and antiques. We aim to empower artists and antique collectors by providing them with a platform to showcase their talents and reach a wider audience.</i></p>
 </body>
 </html>
