--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
  <title>menu</title>
@@ -7,6 +8,11 @@
 <h1 align="center">Menu</h1>
 
 <table border=1 align='center' style="font-size:25;text-align:center;background-color:white;opacity:.7;">
+
+<tr>
+ <td>our collections</td>
+ <td><a href="ourcollections.html" target="_blank">click here</a></td>
+</tr>
 
 <tr>
  <td>available paintings</td>
