--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <html>
 <head>
  <title>About</title>
+ <link rel="stylesheet" href="mystyle.css">
 </head>
-<body align='center' style="background-image:linear-gradient(to bottom,rgba(0,0,0,.4),rgba(0,0,0,.5)),url('women.jpg');background-repeat:no-repeat;background-position:center;background-size:cover;font-size:20px;color:white;">
-
+<body >
+<div class="background2"></div>
 <h1>ART HUB</h1>
-<h3>About the website</h3>
+<h2>About the website</h2>
 <p>
 At Art Hub, we envision a world where art transcends boundaries, connecting people from all walks of life through the universal language of creativity. We believe that art has the power to inspire, heal, and transform communities, and our vision is to create a thriving ecosystem that nurtures and celebrates artistic talent.
 <br><br>
@@ -19,7 +20,6 @@ instagram:A_R_T_H_U_B
 <img src='facebook2.png' alt='logo' width='15' height='15'>
 facebook:A_R_T_H_U_B<br>
 <img src='gmail.png' alt='logo' width='15' height='15'>
-
 gmail:arthub@gmail.com
 </p>
 </body>
