--- a/createaccount.html
+++ b/createaccount.html
@@ -1,11 +1,12 @@
-
 <html>
 <head>
  <title>Create Account</title>
+ <link rel="stylesheet" href="mystyle.css">
 </head>
-<body style="font-size:20;color:white;background-color:grey;margin-left:30%;">
-
+<body class="body">
+  <img src="polygon.jpg" alt="backgroundimage" class="background">
 <h1>NEW ACCOUNT</h1>
+<div class="form-box2">
 <form>
   <label for='username'>Username:</label>
   <input type='text' size='40' id='username'><br><br>
@@ -52,6 +53,6 @@
   <input type='button' onclick="alert('Account created')" value='CREATE' style="background-color: green; color: white;">
 
 </form>
-
+</div>
 </body>
 </html>
