--- a/frontpage.html
+++ b/frontpage.html
@@ -2,18 +2,76 @@
 <html>
 <head>
  <title>front page</title>
+
+<style>
+
+h1 {
+     text-align:center;
+     front-size:40px;
+     font-family:arial,sans-serif;
+   }
+
+
+a:link, a:visited{  background-color:rgba(0,50,50,.8);
+ color:white;
+  text-decoration: none;
+   padding: 1px 12px;
+  display:inline-block;
+  border-radius:8px;
+  border:2px solid white;
+  }
+a:hover{   
+           color:yellow;
+           text-decoration:underline;
+           background-color: green;
+           border:2px solid yellow;
+        }
+a:active{  color:red;
+           text-decoration:none;}
+
+body{
+    
+ background-image:linear-gradient(to bottom,rgba(0,0,0,.2),rgba(0,0,0,.5)),url('tree2.jpg');
+     background-repeat:no-repeat;
+     background-position:center;
+     background-size:cover;
+    
+     font-size:20px;
+     color:white;
+    }
+#para2 {
+   color:white;
+   text-align:center;
+   font-size:25px;
+   border: 2px solid orange;
+   border-radius:30px;
+   padding:5px;
+   background-color:rgba(0,50,50,.8);
+   opacity:.8;
+   
+  }
+#para1 {
+ text-align:right;
+  background-color:rgba(0,50,50,.8);
+  padding:5px;
+
+}
+
+</style>
+
 </head>
-<body style="background-image:linear-gradient(to bottom,rgba(0,0,0,.1),rgba(0,0,0,.5)),url('tree2.jpg');background-repeat:no-repeat;background-position:center;background-size:cover;font-size:20px;color:white;">
-<h1 style="text-align:center;font-size:40px;font-family:arial,sans-serif;">ART HUB</h1>
-<button type="submit" style="background-color:#FFFDD0;"><a  href='login.html' target='_balnk'><h3>Login</h3></a>
-</button><br>
-<button type="submit" style="background-color:#FFFDD0;"><a href='menu.html' target='_balnk'><h3>Menu</h3></a>
-</button>
-<P style="text-align:center;font-size:25px;font-family:'times new roman',serif;">
+<body>
+<p id="para1">
+<a href='about.html' target='_blank'>Contact</a>
+<a href='menu.html' target='_balnk'>Menu</a>
+<a  href='login.html' target='_blank'>Login</a>
+</p>
+<h1>ART HUB</h1>
+<P id="para2">
 <b>Welcome to Art Hub!</b>
 <br><br>
-<i>Introduction: Art Hub is a global community that connects art enthusiasts, collectors, and creators from all corners of the world. Our platform offers a unique space where you can discover and appreciate a diverse range of artworks and antique products, connect with talented artists, and even buy or sell exceptional pieces of art.
+Introduction: Art Hub is a global community that connects art enthusiasts, collectors, and creators from all corners of the world. Our platform offers a unique space where you can discover and appreciate a diverse range of artworks and antique products, connect with talented artists, and even buy or sell exceptional pieces of art.
 <br><br>
-At Art Hub, our mission is to bridge the gap between artists and art lovers, creating a vibrant marketplace that celebrates creativity and fosters a deep appreciation for the arts and antiques. We aim to empower artists and antique collectors by providing them with a platform to showcase their talents and reach a wider audience.</i></p>
+At Art Hub, our mission is to bridge the gap between artists and art lovers, creating a vibrant marketplace that celebrates creativity and fosters a deep appreciation for the arts and antiques. We aim to empower artists and antique collectors by providing them with a platform to showcase their talents and reach a wider audience.</p>
 </body>
 </html>
