--- a/login.html
+++ b/login.html
@@ -1,18 +1,23 @@
+<!DOCTYPE html>
 <html>
 <head>
- <title>login</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="mystyle.css">
+
 </head>
-<body align="center" style="font-size:20px;color:white;background-color:grey;">
-
-<h1 >LOGIN</h1>
-
-<form>
-<label for='username'>Username</label>
-<input type='text' id='username' style="background-color: #f0f0f0; color: #333333; border: 2px solid #4CAF50; padding: 6px; font-size: 16px; border-radius: 2px;"><br><br>
-<label for='password'>Password</label>&nbsp;
-<input type='password' id='password' style="background-color: #f0f0f0; color: #333333; border: 2px solid #4CAF50; padding: 6px; font-size: 16px; border-radius: 2px;"><br><br>
-<input type="button" value="SUBMIT" style="background-color: green; color: white;">
-</form>
-New user?<a href="createaccount.html" target="_blank">create account</a>
+<body class="body">
+    <img src="polygon.jpg" alt="backgroundimage" class="background">
+    <h1>LOGIN</h1>
+    <div class="form-box">
+            <form>
+                <label for='username'>Username</label>
+                <input type='text' id='username'><br><br>
+                <label for='password'>Password</label>&nbsp;
+                <input type='password' id='password'><br><br>
+                <input class="button" type="button" value="SUBMIT">
+            </form>
+            New user? <a href="createaccount.html" target="_top">create account</a>
+        </div>
+    </div>
 </body>
 </html>
