--- a/menu.html
+++ b/menu.html
@@ -1,36 +1,29 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
- <title>menu</title>
+        <title>Menu</title>
+        <link rel="stylesheet" href="mystyle.css">
 </head>
-<body style="background-image:linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0)),url('mountain.jpg');background-repeat:no-repeat;background-position:center;background-size:cover;color:green;">
+<body class="menubody">
 
-<h1 align="center">Menu</h1>
+<h1 class="h1">Menu</h1>
 
-<table border=1 align='center' style="font-size:25;text-align:center;background-color:white;opacity:.7;">
-
-<tr>
- <td>our collections</td>
- <td><a href="ourcollections.html" target="_blank">click here</a></td>
-</tr>
-
-<tr>
- <td>available paintings</td>
- <td><a href="availableartwork.html" target="_blank">click here</a></td>
-</tr>
-<tr>
- <td>login</td>
- <td><a href="login.html" target="_blank">click here</a></td>
-</tr>
-<tr>
- <td>create account</td>
- <td><a href="createaccount.html" target="_blank">click here</a></td>
-</tr>
-<tr>
- <td>about us</td>
- <td><a href="about.html" target="_blank">click here</a></td>
-</tr>
-
+<table>
+    <tr>
+        <td><a href="ourcollections.html" target="_blank">Our Collections</a></td>
+    </tr>
+    <tr>
+        <td><a href="availableartwork.html" target="_blank">Available Paintings</a></td>
+    </tr>
+    <tr>
+        <td><a href="login.html" target="_blank">Login</a></td>
+    </tr>
+    <tr>
+        <td><a href="createaccount.html" target="_blank">Create Account</a></td>
+    </tr>
+    <tr>
+        <td><a href="about.html" target="_blank">About us</a></td>
+    </tr>
 </table>
 
 </body>
