--- a/ourcollections.html
+++ b/ourcollections.html
@@ -1,10 +1,28 @@
 <html>
 <head>
  <title>our collections</title>
+ <style>
+    h1 {
+        color(129, 14, 95);
+        text-align:center;
+    }
+    p {
+        font-size: 20px;
+       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+       color: rgb(255, 102, 0);
+       border: 2px solid orange;
+       background-color:white;
+       border-radius: 20px;
+       padding: 10px;
+    }
+    body {
+        background-color:rgb(180, 223, 116);
+    }
+ </style>
 </head>
-<body style="background-color:lightblue;">
-<h1 style="color:tomato;text-align:center;">OUR COLLECTIONS</h1>
-<p style="font-size:20;color:#A52A2A;">
+<body>
+<h1>OUR COLLECTIONS</h1>
+<p>
 <b>Furniture:</b> Vintage and antique chairs, tables, cabinets.
 <br><br>
 <b>Jewelry:</b> Antique rings, necklaces, bracelets, and brooches.
