--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
  <title>About</title>
  <link rel="stylesheet" href="mystyle.css">
 </head>
-<body >
+<body class="body">
 <div class="background2"></div>
 <h1>ART HUB</h1>
 <h2>About the website</h2>
